# PropertyCrawler

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  scrapy.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/bash/: postCreateCommand.sh
cdk/: .gitignore  app.py  cdk.json
cdk/cdk/: crawling_batch_stack.py  slack_subscription_stack.py
cdk/lambda/crawling_batch/: cache.py  google_sheets.py  handler.py  scraper.py  slack_notifer.py
cdk/lambda/crawling_batch/crawling_house/: items.py  middlewares.py  pipelines.py
cdk/lambda/layer/common_layer/: utils.py
cdk/lambda/layer/common_layer/python/: ssm.py
cdk/lambda/layer/crawling_layer/: requirements.txt
cdk/lambda/layer/modules_layer/: requirements.txt
cdk/lambda/layer/scrapy_layer/: requirements.txt
cdk/lambda/layer/slack_layer/: requirements.txt
cdk/lambda/slack_subscription/: handler.py
cdk/tests/unit/: test_cdk_stack.py
crawling_batch/crawling_house/: items.py  pipelines.py  settings.py
crawling_batch/crawling_house/spiders/: scrapy_blog_spider.py
crawling_house/: items.py  pipelines.py  settings.py
docs/: Crawler Property Results Template.xlsx  process1.md  process2.md  process3.md  process4.md
